AgriStore/force-app/main/default/objects/Equipment__c/fields/Equipment_Name__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Name__c</fullName>
    <label>Equipment Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>