AgriStore/force-app/main/default/objects/Equipment__c/recordTypes/Heavy_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Heavy_Equipment</fullName>
    <active>true</active>
    <description>Record type for heavy agricultural equipment like tractors and harvesters</description>
    <label>Heavy Equipment</label>
</RecordType>