AgriStore/force-app/main/default/objects/Equipment__c/recordTypes/Irrigation_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Irrigation_Equipment</fullName>
    <active>true</active>
    <description>Record type for irrigation and water management equipment</description>
    <label>Irrigation Equipment</label>
</RecordType>