AgriStore/force-app/main/default/objects/Equipment__c/recordTypes/Light_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Light_Equipment</fullName>
    <active>true</active>
    <description>Record type for light agricultural equipment and tools</description>
    <label>Light Equipment</label>
</RecordType>